...
    <string name="username">Username</string>
    <string name="udise">Username (UDISE)</string>
    <string name="school">SCHOOL</string>
    <string name="otp">OTP</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="unable_to_log_out">Unable to Log you out, Some error occurred.</string>
    <string name="incorrect_credentials">Username or Password didn\'t match. Please try again</string>
    <string name="not_connected_to_internet">It seems you are not connected to the Internet. Please switch on your Mobile Data to login.</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="username_less_than_3">Username has to be 3 or more characters</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="pass_less_than_8_error">Password has to be at least 8 characters</string>
    <string name="set_new_password">Set New Password</string>
    <string name="pass_did_not_match">Passwords didn\'t match.</string>
    <string name="pass_changed_redirecting">The password has been successfully changed. Redirecting you to profile page</string>
    <string name="pass_change_successful">The password has been successfully changed. You need to login again to continue. Redirecting you to login page</string>
    <string name="error_in_change_pass">The server responded with an error. Please retry again</string>
    <string name="internet_not_connected">It seems you are not connected to the internet. Please switch on your mobile data to change password.</string>
    <string name="sending_otp">Sending OTP</string>
    <string name="error_sending_otp">Error sending OTP. Please contact admin</string>
    <string name="no_internet_2">It seems you are not connected to internet. Please check.</string>
    <string name="updating_user_profile">Updating User Profile...</string>
    <string name="both_cannot_change_at_same_time">Both Phone number and email cannot change at the same time. Please try with one first.</string>
    <string name="successful_update">User Details successfully updated.</string>
...
