...
                    android:textColorHint="@color/white"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/white"
                    app:passwordToggleEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusLeft="@+id/login_password"
                        android:nextFocusRight="@+id/login_password"
                        android:nextFocusUp="@+id/login_password"
                        android:nextFocusDown="@+id/login_password"
                        android:paddingLeft="6dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
...
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/login_submit"
                android:layout_width="265dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:layout_marginTop="14dp"
                android:textColor="@android:color/black" />
...
