...
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/app_blue"
            android:gravity="center"
            android:text="NEXT"
...
