...
                    android:id="@+id/center_divider_inner_bottom"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/assessment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/center_divider_inner_bottom"
                    android:layout_toRightOf="@id/center_divider_inner_bottom"
...
